--- a/css/styles.css
+++ b/css/styles.css
@@ -2369,7 +2369,7 @@ body.modal-open {
     background-color: #636efa;
 }
 
-.venue-tag.preprint.arxiv {
+.venue-tag.preprint.arXiv {
     background-color: #ff6b6b;
 }
 
